# fond

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  THIRD_PARTY.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spike.yml
.github/workflows/: release.yml  validate.yml
apple/: .gitignore  README.md  build-xcframework.sh
apple/FondApp/: project.yml
apple/FondApp/Sources/: AppModel.swift  CookModeView.swift  CookSessionModel.swift  FondApp.swift  KitchenTimer.swift  PhoneSessionRelay.swift  RecipeDetailView.swift  RecipeEditView.swift  RecipeListView.swift  RecipesFolderWatcher.swift  RootView.swift  SecurityScopedFolder.swift  SettingsView.swift  SidebarView.swift
apple/FondKit/: Package.swift
apple/FondKit/Sources/FondKit/: Conveniences.swift
apple/FondWatch/Sources/: FondWatchApp.swift  WatchNotifications.swift  WatchSessionModel.swift  WatchViews.swift
apple/FondWatchWidget/Sources/: FondWatchWidget.swift
apple/SampleData/recipes/: chicken-adobo.cook  chocolate-chip-cookies.cook  simple-eggs.cook  thai-green-curry.cook
apple/Shared/: CookSessionPayload.swift
crates/fond/: Cargo.toml
crates/fond-core/: Cargo.toml  README.md
crates/fond-core/src/: ingredient_class.rs  lib.rs  quantity.rs  scale.rs  substitution.rs
crates/fond-domain/: Cargo.toml  README.md
crates/fond-domain/src/: edit.rs  emitter.rs  error.rs  filter.rs  lib.rs  parser.rs  recipe.rs  slug.rs  user.rs
crates/fond-domain/tests/: cooklang_spike.rs  domain_test.rs  edit_test.rs  paprika_spike.rs  schema_org_spike.rs
crates/fond-domain/tests/fixtures/: birria-tacos.cook  cilbir.cook  creme-brulee.cook  mapo-tofu.cook  miso-ramen.cook  pasta-alla-norma.cook  sourdough-bread.cook
crates/fond-ffi/: Cargo.toml  README.md
crates/fond-ffi/src/: client.rs  dto.rs  error.rs  lib.rs
crates/fond-ffi/tests/: client.rs
crates/fond-import/: Cargo.toml
crates/fond-import/src/: error.rs  lib.rs  ocr.rs  pipeline.rs  share.rs
crates/fond-import/src/paprika/: convert.rs  mod.rs  parse.rs  types.rs
crates/fond-import/src/schema_org/: convert.rs  extract.rs  mod.rs  types.rs
crates/fond-import/tests/: paprika_import_test.rs  schema_org_import_test.rs
crates/fond-scrape/: Cargo.toml
crates/fond-scrape/src/: client.rs  credentials.rs  error.rs  lib.rs
crates/fond-store/: Cargo.toml  README.md
crates/fond-store/migrations/: V001__initial_schema.sql  V002__add_total_time_minutes.sql  V003__pantry_items.sql  V004__cook_logs.sql  V005__notes_ratings.sql  V006__user_profiles.sql  V007__meal_plans.sql  V008__nutrition_facts.sql  V009__import_review_queue.sql  V010__overlay_slug_uuid_identity.sql
crates/fond-store/src/: cook_log.rs  crypto.rs  db.rs  error.rs  grocery.rs  import_review.rs  lib.rs  meal_plan.rs  note.rs  nutrition.rs  overlay.rs  pantry.rs  paths.rs  rating.rs  reindex.rs  repo.rs  scoreboard.rs  user.rs  write.rs
crates/fond-store/tests/: overlay_crypto_test.rs  overlay_test.rs  sqlite_fts5_spike.rs  store_test.rs  write_test.rs
crates/fond-timeline/: Cargo.toml
crates/fond-timeline/src/: build.rs  classify.rs  coordinate.rs  duration.rs  infer.rs  lib.rs  model.rs  resource.rs  schedule.rs
crates/fond-voice/: Cargo.toml
crates/fond-voice/src/: command.rs  lib.rs  listener.rs  speech.rs  state.rs  tts.rs
crates/fond-web/: Cargo.toml
crates/fond-web/src/: auth.rs  error.rs  filters.rs  lib.rs  state.rs
crates/fond-web/src/routes/: grocery.rs  meal_plan.rs  mod.rs  recipes.rs
crates/fond-web/templates/: base.html  grocery.html  index.html  plan_detail.html  plan_list.html  recipe_detail.html  recipe_list_partial.html  tags.html
crates/fond-web/tests/: auth.rs
crates/fond/src/: main.rs  ocr.rs  overlay_key.rs  voice_cook.rs
crates/fond/src/tui/: app.rs  mod.rs  ui.rs
crates/fond/tests/: cli_test.rs
data/scripts/: subset_usda.py
data/substitutions/: substitutions.json
data/usda/: usda_nutrition_subset.csv
docs/adr/: 001-core-language-rust.md  002-hybrid-storage.md  003-cooklang-integration.md  004-cli-design.md  005-family-shared-db.md  006-web-scraping.md  007-unit-conversion.md  008-cooking-timeline.md  009-pantry-model.md  010-import-architecture.md  011-native-apple-bridge.md  012-sync-multi-device.md  013-data-model-stability.md  014-watch-companion-relay.md  015-overlay-sidecar-codec.md  016-multi-recipe-coordination.md  017-community-sharing.md  018-voice-cook-mode.md  019-encryption-at-rest.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  cli-reference.md  data-model.md  exporting.md  getting-started.md  importing.md  introduction.md  pantry-grocery.md  security.md  self-hosting.md  syncing.md
docs/due-diligence/: ingredient-dataset-review.md  nyt-atk-scraping-review.md  paprika-tos-review.md  substitution-dataset.md  usda-fooddata-central.md
docs/research/: sync-multi-device-strategy.md
docs/spikes/: 001-cooklang-parser.md  002-paprika-format.md  003-schema-org-extraction.md  004-sqlite-fts5.md
