[workspace]
resolver = "2"
members = [
    "crates/fond",
    "crates/fond-core",
    "crates/fond-domain",
    "crates/fond-store",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["kafkade"]
license = "MIT"
repository = "https://github.com/kafkade/fond"

[workspace.dependencies]
fond-domain = { path = "crates/fond-domain", version = "0.2.2" }
fond-core = { path = "crates/fond-core", version = "0.2.2" }
fond-store = { path = "crates/fond-store", version = "0.2.2" }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
directories = "6"
cooklang = "0.18"
flate2 = "1"
zip = { version = "4", default-features = false, features = ["deflate"] }
scraper = "0.22"
refinery = { version = "0.9", features = ["rusqlite"] }
tempfile = "3"
clap_complete = "4"
comfy-table = "7"
