[workspace]
resolver = "2"
members = [
    "crates/fond",
    "crates/fond-core",
    "crates/fond-domain",
    "crates/fond-import",
    "crates/fond-scrape",
    "crates/fond-store",
    "crates/fond-timeline",
    "crates/fond-web",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["kafkade"]
license = "MIT"
repository = "https://github.com/kafkade/fond"

[workspace.dependencies]
fond-domain = { path = "crates/fond-domain", version = "0.3.0" }
fond-core = { path = "crates/fond-core", version = "0.3.0" }
fond-import = { path = "crates/fond-import", version = "0.3.0" }
fond-store = { path = "crates/fond-store", version = "0.3.0" }
fond-scrape = { path = "crates/fond-scrape", version = "0.3.0" }
fond-timeline = { path = "crates/fond-timeline", version = "0.3.0" }
fond-web = { path = "crates/fond-web", version = "0.3.0" }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rusqlite = { version = "0.39", features = ["bundled", "column_decltype"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
directories = "6"
cooklang = "0.18"
flate2 = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
scraper = "0.27"
refinery = { version = "0.9", features = ["rusqlite"] }
tempfile = "3"
clap_complete = "4"
comfy-table = "7"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
