[package]
name = "fond-import"
description = "Import pipeline for fond recipe manager — Paprika, schema.org, and future adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fond-domain.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
zip.workspace = true
scraper.workspace = true

[dev-dependencies]
tempfile.workspace = true
