[package]
name = "fond-scrape"
description = "Web scraping and HTTP fetching for fond recipe manager — schema.org extraction, authenticated sessions, site-specific parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
keyring = "4"
