[package]
name = "fond-scrape"
description = "Web scraping and HTTP fetching for fond recipe manager — schema.org extraction, authenticated sessions, site-specific parsers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.13", features = ["blocking", "cookies"] }
# The `keyring` crate is, as of v4, just sample/CLI code: the library API now
# lives in `keyring-core` and each platform's backend is a separate store crate
# (per the maintainers' explicit guidance to depend on `keyring-core` directly).
keyring-core = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1"
