[package]
name = "fond-store"
description = "SQLite persistence, migrations, and FTS5 search for fond recipe manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fond-domain.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
refinery.workspace = true
cooklang.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
