[package]
name = "fond"
description = "A private, local-first personal cooking & recipe manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "fond"
path = "src/main.rs"

[dependencies]
fond-core.workspace = true
fond-domain.workspace = true
fond-import.workspace = true
fond-scrape.workspace = true
fond-store.workspace = true
fond-timeline.workspace = true
fond-voice.workspace = true
fond-web.workspace = true
clap = { version = "4", features = ["derive", "env"] }
clap_complete.workspace = true
comfy-table.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
atty = "0.2"
flate2.workspace = true
zip.workspace = true
chrono.workspace = true
uuid.workspace = true
rpassword.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
flate2.workspace = true
zip.workspace = true
serde_json.workspace = true
fond-import.workspace = true
